# intern-project

01-esp32-fudamental/: .gitignore  CMakeLists.txt  README.md  diagram.json  wokwi.toml
01-esp32-fudamental/main/: idf_component.yml  main.cpp
02-GPIO-and-TIMING/: .gitignore  CMakeLists.txt  README.md  diagram.json  wokwi.toml
02-GPIO-and-TIMING/main/: CMakeLists.txt  main.cpp
02-GPIO-and-TIMING/main/drivers/led-driver/: led-driver.h
03-memory-and-crash-handling/: CMakeLists.txt  README.md
03-memory-and-crash-handling/main/: main.cpp
04-wifi-manager/: CMakeLists.txt  index.html  partitions.csv
04-wifi-manager/app-frontend/: index.html  package.json  tsconfig.app.json
04-wifi-manager/app-frontend/src/: App.vue
04-wifi-manager/app-frontend/src/types/: gpio.ts  type.ts
04-wifi-manager/backend/: go.mod  go.sum  server.go
04-wifi-manager/backend/handler/: gpio_handler.go
04-wifi-manager/backend/models/: gpio.go  history.go  led_state.go  response.go  wifi.go
04-wifi-manager/backend/repository/: gpio_repository.go
04-wifi-manager/backend/services/: gpio_service.go
04-wifi-manager/backend/utils/: response.go
04-wifi-manager/frontend/: index.html  package.json
04-wifi-manager/frontend/src/: App.vue  networks.json
04-wifi-manager/main/: CMakeLists.txt  main.cpp
04-wifi-manager/main/config/nvs-config/: nvs_config.cpp  nvs_config.h
04-wifi-manager/main/controller/ap-controller/: ap_controller.h
04-wifi-manager/main/controllers/ap-controller/: ap_controller.cpp  ap_controller.h
04-wifi-manager/main/cores/gpio-manager/: gpio_manager.cpp  gpio_manager.h
04-wifi-manager/main/cores/system-manager/: system_manager.cpp  system_manager.h
04-wifi-manager/main/driver/rtc-driver/: rtc_driver.h
04-wifi-manager/main/drivers/button-driver/: button_driver.cpp  button_driver.h
04-wifi-manager/main/drivers/led-driver/: led_driver.cpp  led_driver.h
04-wifi-manager/main/models/: app_context.h  gpio.h  led_mode.h  router_context.h  storage_event.h
04-wifi-manager/main/router/ap-router/: ap_router.cpp  ap_router.h
04-wifi-manager/main/services/http-client-service/: http_client_service.cpp  http_client_service.h
04-wifi-manager/main/services/http-service/: http_service.cpp  http_service.h
04-wifi-manager/main/services/led-service/: led_service.cpp  led_service.h
04-wifi-manager/main/services/storage-service/: storage_service.cpp  storage_service.h
04-wifi-manager/main/services/time-service/: time_service.cpp  time_service.h
04-wifi-manager/main/services/wifi-service/: wifi_service.cpp  wifi_service.h
04-wifi-manager/main/utils/response/: response.cpp  response.h
04-wifi-manager/main/utils/router-wrapper/: router_wrapper.cpp  router_wrapper.h
05-peripheral-protocol/: CMakeLists.txt  README.md  diagram.json  eim_config.toml  sdkconfig  sdkconfig.old  wokwi.toml
05-peripheral-protocol/go-serial-port/: go.mod  main.go
05-peripheral-protocol/main/: CMakeLists.txt  idf_component.yml  main.cpp
05-peripheral-protocol/main/drivers/i2c-driver/: i2c_driver.cpp  i2c_driver.h
05-peripheral-protocol/main/drivers/lcd-driver/: lcd_driver.cpp  lcd_driver.h
05-peripheral-protocol/main/drivers/mpu-driver/: mpu_driver.cpp  mpu_driver.h
05-peripheral-protocol/main/drivers/rfid-driver/: rfid_driver.cpp  rfid_driver.h
05-peripheral-protocol/main/models/: circular.h  lcd.h  mpu.h
05-peripheral-protocol/main/services/circular-buffer-service/: circular_buffer_service.cpp  circular_buffer_service.h
05-peripheral-protocol/main/services/mpu-service/: mpu_service.cpp  mpu_service.h
05-peripheral-protocol/main/services/uart-service/: uart_service.cpp  uart_service.h
